--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body {
+    margin: 0;
+}
+
+.sidenav-sections {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+pre {
+    border: 1px solid #58585b;
+    border-radius: 10px;
+    padding: 15px;
+    color: #58585b;
+    font-size: 10px;
+}
